# cryptobox

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindSodium.cmake
src/cryptobox/: CMakeLists.txt
src/cryptobox/core/: CMakeLists.txt  Common.hpp  HSM.cpp  HSM.hpp  Storage.cpp  Storage.hpp
src/cryptobox/core/tests/: CMakeLists.txt  test_hsm.cpp
src/cryptobox/drivers/: CMakeLists.txt  cryptobox.cpp
