file (GLOB SOURCES *.cpp)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${sodium_INCLUDE_DIR})
foreach (SOURCE ${SOURCES})
    get_filename_component(EXE ${SOURCE} NAME_WE)
    list(APPEND EXECS ${EXE})
    add_executable(${EXE} ${SOURCES})
    target_link_libraries(${EXE} ${Boost_LIBRARIES} cryptobox-core ${sodium_LIBRARY_RELEASE})
endforeach(SOURCE)

#install(TARGETS ${EXECS} RUNTIME DESTINATION ${PROJECT_BINARY_DIR})
